--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+    		<groupId>org.yaml</groupId>
+  		    <artifactId>snakeyaml</artifactId>
+  	        <version>1.5</version>
+		</dependency>
 	</dependencies>
 
 	<build>
