--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
-server.port : 8080
+server.port : 8085
 spring.mail.host =smtp.gmail.com
 spring.mail.username = funplanetOrg@gmail.com
 spring.mail.password =01147972787
 spring.mail.port =587
 spring.mail.properties.mail.smtp.starttls.enable =true
+#spring.datasource.url= jdbc:mysql://160.153.128.28/spring
+#spring.datasource.username=hamedo
+#spring.datasource.password=hamedo_123
+spring.datasource.url= jdbc:mysql://localhost/spring
+spring.datasource.username=root
+spring.datasource.password=
