--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.mail.username = funplanetOrg@gmail.com
 spring.mail.password =01147972787
 spring.mail.port =587
 spring.mail.properties.mail.smtp.starttls.enable =true
-spring.datasource.url= jdbc:mysql://160.153.128.28/spring
-spring.datasource.username=hamedo
-spring.datasource.password=hamedo_123
+spring.datasource.url= jdbc:mysql://sql8.freemysqlhosting.net/sql8173232
+spring.datasource.username=sql8173232
+spring.datasource.password=DTkrwbb4Gk
