--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ spring.mail.username = funplanetOrg@gmail.com
 spring.mail.password =01147972787
 spring.mail.port =587
 spring.mail.properties.mail.smtp.starttls.enable =true
-spring.datasource.url= jdbc:mysql://sql8.freemysqlhosting.net/sql8173232
-spring.datasource.username=sql8173232
-spring.datasource.password=DTkrwbb4Gk
+spring.datasource.url= jdbc:mysql://sql8.freemysqlhosting.net/sql8174462
+spring.datasource.username=sql8174462
+spring.datasource.password=yEheW4TV1H
